--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-template",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adcimon.github.io/react-template",
   "dependencies": {
     "@adcimon/react-components": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
